src/lang/go/snapshots/nix_init__lang__go__tests__parse-3.snap
---
source: src/lang/go/mod.rs
expression: "parse_line(\"golang.org/x/crypto v0.0.0-20221012134737-56aed061732a/go.mod h1:IxCIyHEi3zRg3s0A5j5BB6A9Jmi73HwBIUl50j+osU4=\")"
---
(
    "golang.org/x/crypto",
    Version {
        major: 0,
        minor: 0,
        patch: 0,
        pre: Prerelease("20221012134737-56aed061732a"),
    },
)
